# pi-object-detection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
config/: config.toml
include/: async_queue.h  inference.h  inference_config.h  logger.h  object_detection.h  object_detection_config.h  types.h
scraps/: mediamtx.sh  videotestsrc.sh
src/: aislop.cpp  inference.cpp  inference_config.cpp  main.cpp  object_detection.cpp  object_detection_config.cpp
